<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.fadillah.jetpacksubmission.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="id.fadillah.jetpacksubmission.ui.fragment.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.capstone.project.favorite.fragment.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="id.fadillah.jetpacksubmission.ui.fragment.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="id.fadillah.jetpacksubmission.ui.fragment.tv.TvFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/fragment_tv" />
</navigation>