<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_ied"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/eid_al_fitr_mubarak_lottie"/>

    <RelativeLayout
        android:id="@+id/close_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_outline_thick" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/bold"
            android:layout_marginStart="@dimen/size_8"
            android:layout_marginEnd="@dimen/size_8"
            android:text="@string/x" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ied_fitri"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/light"
        app:layout_constraintTop_toBottomOf="@+id/lottie_ied"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/apologize"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/light"
        android:layout_marginBottom="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>