<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_explore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_8"
    tools:context=".ui.fragment.explore.ExploreFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_marginTop="@dimen/size_16"
        android:hint="@string/choose_what_you_want_to_explore"
        app:startIconDrawable="@drawable/ic_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/title_explore"
            android:hint="@string/title_explore">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_8"
        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/size_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_explore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            style="@style/TextInputSearch"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_any"
            android:inputType="textCapSentences"/>
    </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading_lottie"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/empty_lottie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/empty_lottie"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="@dimen/size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_explore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>