<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shimmer_cover"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_no_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/black"
            android:text="@string/now_playing"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmer_cover" />

        <LinearLayout
            android:id="@+id/shimmer_now_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_now_playing">

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/black"
            android:text="@string/popular"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmer_now_playing" />

        <LinearLayout
            android:id="@+id/shimmer_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular">

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/black"
            android:text="@string/top_rated"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmer_popular" />

        <LinearLayout
            android:id="@+id/shimmer_top_rated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_rated">

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />

            <include layout="@layout/item_movie_shimmer" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.facebook.shimmer.ShimmerFrameLayout>